--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,28 @@ jspm_packages
 # Ignore bundler config.
 /.bundle
 
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/*.sqlite3-*
+
+# Ignore log, tmp, and master.key
+/log/*
+!/log/.keep
+/tmp/
+/config/master.key
+/config/credentials.yml.enc
+
+# Ignore byebug history
+.byebug_history
+
+# Ignore coverage reports
+/coverage/
+
+# Ignore node_modules and yarn
+/node_modules/
+/yarn-error.log
 
 # Ignore all logfiles and tempfiles.
 /log/*
